--- a/composer.json
+++ b/composer.json
@@ -5,20 +5,24 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=7.0.0",
+        "php": "^7.3.0",
         "doctrine/dbal": "v2.5.13",
-        "fideloper/proxy": "~3.3",
-        "gloudemans/shoppingcart": "^2.4",
-        "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0",
-        "laravelcollective/html": "^5.4.0",
-        "maatwebsite/excel": "~2.1.0"
+        "facade/ignition": "^2.3.6",
+        "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "7.0.1",
+        "hardevine/shoppingcart": "^2.7.*",
+        "laravel/framework": "^8.0",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^3.0",
+        "laravelcollective/html": "^6.1",
+        "maatwebsite/excel": "^3.1",
+        "nunomaduro/collision": "^5.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "classmap": [
@@ -26,7 +30,9 @@
             "database/factories"
         ],
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
         }
     },
     "autoload-dev": {
